--- a/hw0.ipynb
+++ b/hw0.ipynb
@@ -271,7 +271,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/hansikaw/Documents/UF Coursework/MLE/mle/lib/python3.9/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_85173/232635567.py:7: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n",
+      "/Users/hansika/Documents/MLE/env/mle/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
       "  warnings.warn(\n"
      ]
     },
@@ -279,12 +287,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "### Python version: 3.9.6 (default, Oct 18 2022, 12:41:40) \n",
-      "[Clang 14.0.0 (clang-1400.0.29.202)]\n",
+      "### Python version: 3.9.6 (default, Nov 10 2023, 13:38:27) \n",
+      "[Clang 15.0.0 (clang-1500.1.0.2.5)]\n",
       "### Numpy version: 1.26.3\n",
-      "### Scipy version: 1.11.4\n",
-      "### Pandas version: 2.1.4\n",
-      "### Scikit-learn version: 1.3.2\n",
+      "### Scipy version: 1.12.0\n",
+      "### Pandas version: 2.2.0\n",
+      "### Scikit-learn version: 1.4.0\n",
       "### Matplotlib version: 3.8.2\n",
       "### TensorFlow version: 2.15.0\n",
       "------------\n"
@@ -771,9 +779,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-4  4 -1  1]\n",
-      " [ 4  4 -4 -3]\n",
-      " [-5 -4 -1  2]]\n"
+      "[[ 3  3  0  1]\n",
+      " [-1  0 -2 -1]\n",
+      " [-1  1  0 -1]]\n"
      ]
     }
    ],
@@ -853,12 +861,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-4  4]\n",
+      "[[ 3  3]\n",
+      " [ 0  1]\n",
+      " [-1  0]\n",
+      " [-2 -1]\n",
       " [-1  1]\n",
-      " [ 4  4]\n",
-      " [-4 -3]\n",
-      " [-5 -4]\n",
-      " [-1  2]]\n"
+      " [ 0 -1]]\n"
      ]
     }
    ],
