--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": true,
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -318,28 +318,14 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_85168/1989827619.py:7: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "------------\n",
-      "### Python version: 3.9.6 (default, Nov 10 2023, 13:38:27) \n",
-      "[Clang 15.0.0 (clang-1500.1.0.2.5)]\n",
+      "### Python version: 3.9.6 (default, Oct 18 2022, 12:41:40) \n",
+      "[Clang 14.0.0 (clang-1400.0.29.202)]\n",
       "### NumPy version: 1.26.3\n",
-      "### Scikit-learn version: 1.4.0\n",
+      "### Scikit-learn version: 1.3.2\n",
       "------------\n"
      ]
     }
@@ -390,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -414,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -458,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -472,13 +458,31 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded diabetes data: 442 rows and 10 features.\n",
+      "Column names: ['age', 'sex', 'bmi', 'bp', 's1', 's2', 's3', 's4', 's5', 's6', 'target'].\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"Put your code to load the dataset here.\n",
     "\"\"\"\n",
     "from sklearn import datasets\n",
+    "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "\n",
+    "diabetes = datasets.load_diabetes()\n",
+    "feature_names = diabetes.feature_names\n",
+    "target_name = 'target'\n",
+    "col_names = feature_names + [target_name]\n",
+    "all_x = diabetes.data\n",
+    "all_y = diabetes.target\n",
+    "\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "print('Loaded diabetes data: {} rows and {} features.'.format(all_x.shape[0], all_x.shape[1]))\n",
     "print('Column names: {}.'.format(col_names))"
@@ -486,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -537,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -561,12 +565,27 @@
     "threshold_y = 140.0\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "low = 0\n",
+    "high = 1\n",
+    "\n",
+    "all_x_rescaled = all_x.copy()\n",
+    "\n",
+    "all_x_rescaled -= assumed_min_val_x\n",
+    "all_x_rescaled /= (assumed_max_val_x - assumed_min_val_x)\n",
+    "all_x_rescaled = all_x_rescaled * (high - low) + low\n",
+    "\n",
+    "all_x_rescaled = np.clip(all_x_rescaled, 0, 1)\n",
+    "\n",
+    "all_y_threshold = np.where(all_y < threshold_y, 0, 1).astype(int)\n",
+    "\n",
+    "\n",
+    "#raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -612,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -633,12 +652,15 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "train_x, temp_x, train_y, temp_y = train_test_split(all_x_rescaled, all_y_threshold, train_size=0.6, random_state=seed)\n",
+    "val_x, test_x, val_y, test_y = train_test_split(temp_x, temp_y, test_size=0.5, random_state=seed)\n",
+    "\n",
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -687,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -702,15 +724,34 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- target ---\n",
+      "0: 130\n",
+      "1: 135\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"Put your code here for task 1d. Then answer the question (write your answer in a comment in the space provided).\n",
     "\"\"\"\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
     "\n",
-    "## Answer: "
+    "label = col_names[-1]\n",
+    "assert len(train_y.shape) <= 1 or train_y.shape[1] == 1\n",
+    "if label is not None:\n",
+    "    print('--- {} ---'.format(label))\n",
+    "for v in np.unique(train_y):\n",
+    "    print('{}: {}'.format(v, np.sum(train_y == v)))\n",
+    "\n",
+    "\n",
+    "# raise NotImplementedError()\n",
+    "\n",
+    "## Answer: The dataset is balanced since the distribution of labels (1,0) is almost uniform. They only differ by 5."
    ]
   },
   {
