data augmentation done

--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": true,
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -322,10 +322,10 @@
      "output_type": "stream",
      "text": [
       "------------\n",
-      "### Python version: 3.9.6 (default, Oct 18 2022, 12:41:40) \n",
-      "[Clang 14.0.0 (clang-1400.0.29.202)]\n",
+      "### Python version: 3.9.6 (default, Nov 10 2023, 13:38:27) \n",
+      "[Clang 15.0.0 (clang-1500.1.0.2.5)]\n",
       "### NumPy version: 1.26.3\n",
-      "### Scikit-learn version: 1.3.2\n",
+      "### Scikit-learn version: 1.4.0\n",
       "------------\n"
      ]
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -816,7 +816,7 @@
        "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
       ]
      },
-     "execution_count": 47,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -937,7 +937,7 @@
        "\" THIS CODE CELL IS INTENTIONALLY LEFT EMPTY.  Remove the 'raise NotImplementedError' line. You should leave this cell empty (it is used for autograding). (Do not change the cell type from code to markdown.)\""
       ]
      },
-     "execution_count": 48,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1045,7 +1045,7 @@
        "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
       ]
      },
-     "execution_count": 58,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1102,7 +1102,7 @@
        "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
       ]
      },
-     "execution_count": 60,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1424,7 +1424,7 @@
        "\" THIS CODE CELL IS INTENTIONALLY LEFT EMPTY.  Remove the 'raise NotImplementedError' line. You should leave this cell empty (it is used for autograding). (Do not change the cell type from code to markdown.)\""
       ]
      },
-     "execution_count": 69,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1472,14 +1472,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
-    "## Answer: \n",
+    "## Answer: Training data is sufficient, More training data would not improve the model (There may be very subtle improvement in terms of generalization). Both the training and validation curves have converged and hit a plateau from training size of 150 samples, so further increase may not improve the model accuracy.\n",
     "#\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -1504,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1575,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1620,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1635,16 +1645,27 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
-    "## Answer to (Q1):\n",
+    "## Answer to (Q1): Yes, because it has increased the validation accuracy. The noise introduced in data augmentation has created a more robust model that is able to better generalize unseen data.\n",
     "#\n",
-    "## Answer to (Q2):\n",
+    "## Answer to (Q2): Decreases, when sigma increases the noise increases, making it harder for the model to learn exact patterns. Since validation accuracy increases with sigma we can say the training accuracy decrease shows model generalization (less overfitting). \n",
     "#\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
