hyperparameter tuning done

--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -321,7 +321,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_26737/1989827619.py:7: DeprecationWarning: \n",
+      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_39576/1989827619.py:7: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -1725,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1747,7 +1747,7 @@
        "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1784,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1821,7 +1821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1867,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1898,14 +1898,30 @@
     "        assert bins.shape == (x.shape[1],num_bins), 'Invalid bins.'\n",
     "        \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    else:\n",
+    "        min_vals = np.min(x, axis=0)\n",
+    "        max_vals = np.max(x, axis=0)\n",
+    "        \n",
+    "        assert min_vals.shape == (x.shape[1],)\n",
+    "        \n",
+    "        bins = np.zeros((x.shape[1], num_bins))\n",
+    "        # Create bins for each feature\n",
+    "        for i in range(x.shape[1]):\n",
+    "            bins[i] = np.linspace(min_vals[i], max_vals[i], num_bins, endpoint=True)\n",
+    "\n",
+    "        assert bins.shape == (x.shape[1], num_bins), 'Invalid bins shape.'\n",
+    "\n",
+    "    cat_x = np.zeros((x.shape[0], x.shape[1]), dtype=int)\n",
+    "    for i in range(x.shape[1]):\n",
+    "        cat_x[:, i] = np.digitize(x[:, i], bins[i])\n",
+    "    \n",
     "    cat_x = np.clip(cat_x, 1, num_bins) # clip so no features falls outside of the bins.\n",
     "    return cat_x.astype(int), bins"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1959,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1974,7 +1990,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CategoricalNB w/ real features] Train acc: 50.9%, Val acc: 43.2%\n",
+      "[CategoricalNB w/ categorical features] Train acc: 69.4%, Val acc: 80.7%\n"
+     ]
+    }
+   ],
    "source": [
     "# train and evaluate CategoricalNB on the real features.\n",
     "train_acc, val_acc = train_and_eval_acc(CategoricalNB(), train_x, train_y, val_x, val_y)\n",
@@ -2012,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2026,7 +2051,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[BernoulliNB w/ real features] Train acc: 50.9%, Val acc: 43.2%\n",
+      "[BernoulliNB w/ binary features] Train acc: 71.7%, Val acc: 76.1%\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\" Fill in the code to binarize the feature matrix so that features x with values below the 67th percentile are mapped to 0 and values above are mapped to 1.\n",
     "For this you should use 'real_to_categ' with appropriately chosen bins derived from 'train_x' percentiles.\n",
@@ -2035,7 +2069,22 @@
     "\"\"\"\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "\n",
+    "min_vals = np.min(train_x, axis=0)\n",
+    "percentiles_67 = np.percentile(train_x, 67, axis=0)\n",
+    "\n",
+    "# creating bins\n",
+    "bins = np.array([min_vals, percentiles_67])\n",
+    "bins = bins.T\n",
+    "\n",
+    "assert bins.shape == (train_x.shape[1], 2)\n",
+    "\n",
+    "bin_train_x, bins = real_to_categ(train_x, bins=bins, num_bins=2)\n",
+    "bin_train_x = bin_train_x - 1\n",
+    "bin_val_x, _ = real_to_categ(val_x, bins=bins, num_bins=2)\n",
+    "bin_val_x = bin_val_x - 1\n",
+    "bin_test_x, _ = real_to_categ(test_x, bins=bins, num_bins=2)\n",
+    "bin_test_x = bin_test_x - 1\n",
     "\n",
     "\n",
     "# train and evaluate BernoulliNB on the real features.\n",
@@ -2049,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2105,7 +2154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2134,7 +2183,17 @@
     "    print('Searching for hyperparameters (UFID: {})'.format(UFID))\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    best_acc = 0\n",
+    "    for weights in ['uniform', 'distance']:\n",
+    "        for n_neighbors in [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]:\n",
+    "            neigh = KNeighborsClassifier(n_neighbors=n_neighbors, weights=weights)\n",
+    "            _, val_acc = train_and_eval_acc(neigh, bin_train_x, train_y, bin_val_x, val_y)\n",
+    "            if val_acc > best_acc:\n",
+    "                best_acc = val_acc\n",
+    "                best_hyperparams['weights'] = weights\n",
+    "                best_hyperparams['n_neighbors'] = n_neighbors\n",
+    "                best_model = neigh\n",
+    "                \n",
     "    return best_model, best_hyperparams"
    ]
   },
@@ -2160,7 +2219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2175,7 +2234,17 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Searching for hyperparameters (UFID: 11639514)\n",
+      "Elapsed time: 0.2 seconds [model type: KNeighborsClassifier, hyperparams: {'weights': 'uniform', 'n_neighbors': 16}]\n",
+      "Train acc: 72.8%, val acc: 81.8%, test acc: 76.4%\n"
+     ]
+    }
+   ],
    "source": [
     "st = time.time()\n",
     "model, hyperparams = search_hyperparams_and_train(train_x, train_y, val_x, val_y)\n",
@@ -2193,7 +2262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
