mean as the baseline model for wine classsification

--- a/Exercise/ex3-handout/cai41046108mle-ex3.ipynb
+++ b/Exercise/ex3-handout/cai41046108mle-ex3.ipynb
@@ -1107,23 +1107,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Baseline prediction mode: 5.632142857142857\n",
+      "Baseline prediction mean: 5.632142857142857\n",
       "Baseline error (MSE): 0.638\n"
      ]
     }
    ],
    "source": [
-    "# Simple baseline: always predict the mode (most frequent value)\n",
+    "# Simple baseline: always predict the mean\n",
     "mean = np.mean(train_y)\n",
     "baseline_pred = np.ones_like(train_pred) * mean\n",
-    "print('Baseline prediction mode: {}'.format(mean))\n",
+    "print('Baseline prediction mean: {}'.format(mean))\n",
     "\n",
     "baseline_error = mean_squared_error(baseline_pred, train_y)\n",
     "print('Baseline error (MSE): {:.3f}'.format(baseline_error))"
