--- a/HW/hw2/hw2.ipynb
+++ b/HW/hw2/hw2.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -320,20 +320,6 @@
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_33210/1989827619.py:7: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -948,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -967,9 +953,9 @@
     "\"\"\"Put your code here (~2-3 lines).\n",
     "\"\"\"\n",
     "from sklearn.impute import SimpleImputer\n",
-    "imp_mean = SimpleImputer(strategy='most_frequent', copy=True)\n",
+    "imp_mode = SimpleImputer(strategy='most_frequent', copy=True)\n",
     "\n",
-    "all_xy_noNaNs = imp_mean.fit_transform(all_xy)\n",
+    "all_xy_noNaNs = imp_mode.fit_transform(all_xy)\n",
     "# YOUR CODE HERE\n",
     "# raise NotImplementedError()"
    ]
@@ -1021,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1035,21 +1021,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "InvalidParameterError",
-     "evalue": "The 'test_size' parameter of train_test_split must be a float in the range (0.0, 1.0), an int in the range [1, inf) or None. Got -15 instead.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mInvalidParameterError\u001b[0m                     Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[50], line 15\u001b[0m\n\u001b[1;32m     12\u001b[0m all_y \u001b[38;5;241m=\u001b[39m all_xy_noNaNs[:, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]  \u001b[38;5;66;03m# Target column\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# First split to separate out the training set\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m train_x, temp_x, train_y, temp_y \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_test_split\u001b[49m\u001b[43m(\u001b[49m\u001b[43mscaled_all_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mall_y\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43mprop_vec\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrandom_state\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m42\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# Calculate the proportion of validation set relative to the size of temp (validation + test)\u001b[39;00m\n\u001b[1;32m     18\u001b[0m val_size \u001b[38;5;241m=\u001b[39m prop_vec[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m/\u001b[39m (prop_vec[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m prop_vec[\u001b[38;5;241m2\u001b[39m])\n",
-      "File \u001b[0;32m~/Documents/MLE/env/mle/lib/python3.9/site-packages/sklearn/utils/_param_validation.py:203\u001b[0m, in \u001b[0;36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    200\u001b[0m to_ignore \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mself\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcls\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m    201\u001b[0m params \u001b[38;5;241m=\u001b[39m {k: v \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m params\u001b[38;5;241m.\u001b[39marguments\u001b[38;5;241m.\u001b[39mitems() \u001b[38;5;28;01mif\u001b[39;00m k \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m to_ignore}\n\u001b[0;32m--> 203\u001b[0m \u001b[43mvalidate_parameter_constraints\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    204\u001b[0m \u001b[43m    \u001b[49m\u001b[43mparameter_constraints\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcaller_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfunc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;18;43m__qualname__\u001b[39;49m\n\u001b[1;32m    205\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    207\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    208\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[1;32m    209\u001b[0m         skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[1;32m    210\u001b[0m             prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[1;32m    211\u001b[0m         )\n\u001b[1;32m    212\u001b[0m     ):\n",
-      "File \u001b[0;32m~/Documents/MLE/env/mle/lib/python3.9/site-packages/sklearn/utils/_param_validation.py:95\u001b[0m, in \u001b[0;36mvalidate_parameter_constraints\u001b[0;34m(parameter_constraints, params, caller_name)\u001b[0m\n\u001b[1;32m     89\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     90\u001b[0m     constraints_str \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m     91\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin([\u001b[38;5;28mstr\u001b[39m(c)\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mfor\u001b[39;00m\u001b[38;5;250m \u001b[39mc\u001b[38;5;250m \u001b[39m\u001b[38;5;129;01min\u001b[39;00m\u001b[38;5;250m \u001b[39mconstraints[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m or\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     92\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconstraints[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     93\u001b[0m     )\n\u001b[0;32m---> 95\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m InvalidParameterError(\n\u001b[1;32m     96\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mparam_name\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[38;5;124m parameter of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcaller_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m must be\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     97\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconstraints_str\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. Got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mparam_val\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[38;5;124m instead.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     98\u001b[0m )\n",
-      "\u001b[0;31mInvalidParameterError\u001b[0m: The 'test_size' parameter of train_test_split must be a float in the range (0.0, 1.0), an int in the range [1, inf) or None. Got -15 instead."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"Put your code here (~5-7 lines).\n",
     "\"\"\"\n",
@@ -1057,24 +1029,19 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "\n",
-    "# Normalize features\n",
+    "# min-max normalize of the features\n",
     "scaler = MinMaxScaler()\n",
-    "# Assuming the last column is the target, and the rest are features\n",
     "scaled_all_x = scaler.fit_transform(all_xy_noNaNs[:, :-1])\n",
-    "all_y = all_xy_noNaNs[:, -1]  # Target column\n",
+    "all_y = all_xy_noNaNs[:, -1]  #Target column\n",
+    "\n",
     "\n",
     "# First split to separate out the training set\n",
-    "train_x, temp_x, train_y, temp_y = train_test_split(scaled_all_x, all_y, test_size=1-prop_vec[0], random_state=42)\n",
+    "train_x, temp_x, train_y, temp_y = train_test_split(scaled_all_x, all_y, test_size=1-(prop_vec[0]/sum(prop_vec)), random_state=42)\n",
     "\n",
-    "# Calculate the proportion of validation set relative to the size of temp (validation + test)\n",
     "val_size = prop_vec[1] / (prop_vec[1] + prop_vec[2])\n",
     "\n",
     "# Second split to separate out the validation and test sets\n",
-    "val_x, test_x, val_y, test_y = train_test_split(temp_x, temp_y, test_size=1-val_size, random_state=42)\n",
-    "\n",
-    "# Now you have train_x, train_y, val_x, val_y, test_x, test_y as requested\n",
-    "\n",
+    "val_x, test_x, val_y, test_y = train_test_split(temp_x, temp_y, train_size=val_size, random_state=42)\n",
     "\n",
     "\n",
     "# YOUR CODE HERE\n",
@@ -1083,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "deletable": false,
     "editable": false,
