--- a/HW/hw2/hw2.ipynb
+++ b/HW/hw2/hw2.ipynb
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1145,7 +1145,11 @@
     "    \"\"\"\n",
     "    # R^2 the coefficient of determination\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "\n",
+    "    train_r2 = lrmodel.score(tr_x, tr_y)\n",
+    "    val_r2 = lrmodel.score(v_x, v_y)\n",
+    "    \n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    if verb:\n",
     "        print('{}Train R^2: {:.3f}, Val  R^2: {:.3f}'.format(pref, train_r2, val_r2))\n",
@@ -1156,7 +1160,11 @@
     "    \"\"\"Fill in your code below (~1-2 lines).\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "\n",
+    "    train_mse = mean_squared_error(train_pred, tr_y)\n",
+    "    val_mse = mean_squared_error(val_pred, v_y)\n",
+    "    \n",
+    "    # raise NotImplementedError()\n",
     "\n",
     "    if verb:\n",
     "        print('{}Train MSE: {:.3f}, Val MSE: {:.3f}'.format(pref, train_mse, val_mse))\n",
@@ -1164,7 +1172,11 @@
     "    \"\"\"Fill in your code below (~1-2 lines).\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    \n",
+    "    train_mae = mean_absolute_error(train_pred, tr_y)\n",
+    "    val_mae = mean_absolute_error(val_pred, v_y)\n",
+    "    \n",
+    "    #raise NotImplementedError()\n",
     "\n",
     "    if verb:\n",
     "        print('{}Train MAE: {:.3f}, Val MAE: {:.3f}'.format(pref, train_mae, val_mae))\n",
@@ -1174,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1218,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1232,14 +1244,27 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LinearRegression] Train R^2: 0.841, Val  R^2: 0.845\n",
+      "[LinearRegression] Train MSE: 5264.081, Val MSE: 5189.409\n",
+      "[LinearRegression] Train MAE: 39.676, Val MAE: 38.642\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"Put your code here (~1-2 lines).\n",
     "\"\"\"\n",
     "from sklearn.linear_model import LinearRegression, Ridge\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "\n",
+    "lrmodel = LinearRegression().fit(train_x, train_y)\n",
+    "\n",
+    "#raise NotImplementedError()\n",
     "\n",
     "_ = r2_mse_mae_eval(lrmodel, train_x, train_y, val_x, val_y, pref='[{}] '.format(lrmodel.__class__.__name__))"
    ]
@@ -1285,10 +1310,10 @@
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
-    "## Answer: \n",
+    "## Answer: The model is fairly good since R^2 scores are closer to 1. However there seems to be space for improvement when looking at the MSE and MAE values. Furthermore, the model seems not to generalize well without overfitting.\n",
     "#\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
@@ -1313,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1343,7 +1368,12 @@
     "    \"\"\"Put your code here (~2-3 lines). Concatenate the train and val sets into 'search_x' and 'search_y'.\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "\n",
+    "    search_x = np.r_[tr_x, v_x]\n",
+    "    search_y = np.r_[tr_y, v_y]\n",
+    "    \n",
+    "    \n",
+    "    #raise NotImplementedError()\n",
     "    \n",
     "    hyperparams = do_grid_search(model, param_grid, search_x, search_y)\n",
     "    \n",
@@ -1361,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "deletable": false,
     "editable": false,
