grid search and lasso regression done

--- a/HW/hw2/hw2.ipynb
+++ b/HW/hw2/hw2.ipynb
@@ -1459,9 +1459,14 @@
     "# \n",
     "### Hint: take a look at the documentation of scikit-learn and think.\n",
     "## Answer: \n",
+    "# 1. Yes, even though there are no existing implementations because there is no inbuilt LAD Regressor, you can create a custom regressor by inheriting BaseEstimator and RegressorMixin classes and implementing fit and predict functions to reflect LAD regression.\n",
     "#\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# 2. All scorer objects follow the convention that higher return values are better than lower return values in Grid Search because Grid Search is represented as a maximization problem in Sklearn. Therefore, 'neg_mean_squared_error' is used instead of 'mean_squared_error'\n",
+    "# \n",
+    "# 3. The GridSearchCV implementation uses 5-fold cross-validation by default for the evaluation of each model in hyperparameter tuning. Therefore, it's better to use concatenation of the train and 'validation sets for the Grid search for better hyperparameter tunning.\n",
+    "#\n",
+    "#YOUR CODE HERE\n",
+    "#raise NotImplementedError()"
    ]
   },
   {
@@ -1486,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1500,18 +1505,34 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LassoLars({'alpha': 0.01, 'fit_intercept': True, 'max_iter': 500})\n",
+      "\tTrain R^2: 0.841, Val  R^2: 0.845\n",
+      "\tTrain MSE: 5264.138, Val MSE: 5189.860\n",
+      "\tTrain MAE: 39.672, Val MAE: 38.639\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"Put your code here (~2-3 lines).\n",
     "\"\"\"\n",
     "\n",
+    "from sklearn.linear_model import LassoLars\n",
+    "\n",
+    "lassolars_model = search_train_eval(LassoLars(random_state=seed), param_grid={'alpha': [10, 5, 2, 1, 0.5, 0.1, 0.05, 0.01], 'fit_intercept': (True, False), 'max_iter': [500, 1000]})\n",
+    "\n",
+    "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "deletable": false,
     "editable": false,
