create polynomial features

--- a/HW/hw2/hw2.ipynb
+++ b/HW/hw2/hw2.ipynb
@@ -1596,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1621,13 +1621,26 @@
     "        (b) The second is a linear regression model 'lr_pf' on the polynomial features data.\n",
     "        (c) The third is a regularized \"linear\" model (ridge regression) on the polynomial features data where you tuned the hyperparameters (including regularization constant ensuring alpha >= 1.0).\n",
     "\"\"\"\n",
+    "\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "\n",
+    "poly = PolynomialFeatures(degree=3, interaction_only=False, include_bias=False)\n",
+    "all_x_pf = poly.fit_transform(scaled_all_x)\n",
+    "\n",
+    "\n",
+    "train_x_pf, temp_x_pf, train_y_pf, temp_y_pf = train_test_split(all_x_pf, all_y, test_size=1-(prop_vec[0]/sum(prop_vec)), random_state=seed)\n",
+    "val_size = prop_vec[1] / (prop_vec[1] + prop_vec[2])\n",
+    "val_x_pf, test_x_pf, val_y_pf, test_y_pf = train_test_split(temp_x_pf, temp_y_pf, train_size=val_size, random_state=seed)\n",
+    "\n",
+    "\n",
+    "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1643,7 +1656,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[72], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m train_x_pf\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m==\u001b[39m val_x_pf\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39mamin(train_x_pf) \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m np\u001b[38;5;241m.\u001b[39mamax(train_x_pf) \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.0\u001b[39m\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m var_exists(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mridge_nopf\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m var_exists(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlr_pf\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m var_exists(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mridge_pf\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m ridge_nopf\u001b[38;5;241m.\u001b[39mcoef_\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m14\u001b[39m,)\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "\"\"\" [ASSERTS] Checks for task 3a. \"\"\"\n",
     "assert var_exists('all_x_pf') and all_x_pf.shape == (17379, 679)\n",
